# SolanaRPCExample

./: README.md
Task1/: CMakeLists.txt  README  README.md  Readme_task1  Readme_task1.txt  task1.cpp
Task2/: CMakeLists.txt  README.md  main3.cpp  task2.cpp
Task3/: CMakeLists.txt  task3.cpp
